--- a/Documents/Planning/로스팅_플랜_2025.md
+++ b/Documents/Planning/로스팅_플랜_2025.md
@@ -14,13 +14,13 @@
 
 ### 1.2 핵심 원칙
 
-| 원칙 | 설명 |
-|------|------|
+| 원칙            | 설명                                          |
+| --------------- | --------------------------------------------- |
 | **데이터 기반** | 로스팅 일지의 실제 데이터를 기반으로 의사결정 |
-| **품질 우선** | 손실 최소화보다 일관된 품질 유지를 우선 |
-| **효율성** | 17% 손실률 최적화를 통한 원가 절감 |
-| **투명성** | 모든 로스팅 데이터 및 원가 계산 가시화 |
-| **지속성** | 장기적인 로스팅 플랜 수립 및 개선 |
+| **품질 우선**   | 손실 최소화보다 일관된 품질 유지를 우선       |
+| **효율성**      | 17% 손실률 최적화를 통한 원가 절감            |
+| **투명성**      | 모든 로스팅 데이터 및 원가 계산 가시화        |
+| **지속성**      | 장기적인 로스팅 플랜 수립 및 개선             |
 
 ### 1.3 성공 기준
 
@@ -59,13 +59,13 @@
 
 블렌드 구성: **마사이 40% + 안티구아 40% + 모모라 10% + g4 10%**
 
-| # | 원두 | 생두량(kg) | 볶은량(kg) | 혼합률(%) |
-|---|------|-----------|----------|-----------|
-| 1 | 마사이 | 10,602.4 | 8,800 | 40% |
-| 2 | 안티구아 | 10,602.4 | 8,800 | 40% |
-| 3 | 모모라 | 2,650.6 | 2,200 | 10% |
-| 4 | g4 | 2,650.6 | 2,200 | 10% |
-| **소계** | | **26,505.9** | **22,000** | **100%** |
+| #        | 원두     | 생두량(kg)   | 볶은량(kg) | 혼합률(%) |
+| -------- | -------- | ------------ | ---------- | --------- |
+| 1        | 마사이   | 10,602.4     | 8,800      | 40%       |
+| 2        | 안티구아 | 10,602.4     | 8,800      | 40%       |
+| 3        | 모모라   | 2,650.6      | 2,200      | 10%       |
+| 4        | g4       | 2,650.6      | 2,200      | 10%       |
+| **소계** |          | **26,505.9** | **22,000** | **100%**  |
 
 **혼합 후 손실률**: (26,505.9 - 22,000) / 26,505.9 = **17.0%**
 **판매가**: ₩22,000 (풀문 블렌딩 제품)
@@ -74,24 +74,24 @@
 
 블렌드 구성: **브라질 60% + 콜롬비아 30% + g4 10%**
 
-| # | 원두 | 생두량(kg) | 볶은량(kg) | 혼합률(%) |
-|---|------|-----------|----------|-----------|
-| 1 | 브라질 | 2,891.6 | 2,400 | 60% |
-| 2 | 콜롬비아 | 1,445.8 | 1,200 | 30% |
-| 3 | g4 | 481.9 | 400 | 10% |
-| **소계** | | **4,819.3** | **4,000** | **100%** |
+| #        | 원두     | 생두량(kg)  | 볶은량(kg) | 혼합률(%) |
+| -------- | -------- | ----------- | ---------- | --------- |
+| 1        | 브라질   | 2,891.6     | 2,400      | 60%       |
+| 2        | 콜롬비아 | 1,445.8     | 1,200      | 30%       |
+| 3        | g4       | 481.9       | 400        | 10%       |
+| **소계** |          | **4,819.3** | **4,000**  | **100%**  |
 
 **혼합 후 손실률**: (4,819.3 - 4,000) / 4,819.3 = **17.0%**
 **판매가**: TBD (뉴문 블렌딩 제품)
 
 #### 전체 통계
 
-| 지표 | 값 |
-|------|-----|
-| 총 생두량 | 31,325.3 kg |
-| 총 볶은량 | 26,000 kg |
-| 총 손실량 | 5,325.3 kg |
-| **평균 손실률** | **17.0%** |
+| 지표            | 값          |
+| --------------- | ----------- |
+| 총 생두량       | 31,325.3 kg |
+| 총 볶은량       | 26,000 kg   |
+| 총 손실량       | 5,325.3 kg  |
+| **평균 손실률** | **17.0%**   |
 
 ### 2.2 데이터 구조
 
@@ -116,23 +116,23 @@
 
 #### 기능 요구사항 (FR)
 
-| ID | 요구사항 | 설명 |
-|----|---------|------|
-| FR-1 | 로스팅 기록 관리 | 생두량, 볶은량, 손실률 자동 계산 |
-| FR-2 | 원가 계산 | 블렌드별 원두 혼합률 × 생두 원가 → 블렌드 원가 자동 계산 |
-| FR-3 | 블렌딩 레시피 | 풀문/뉴문별 혼합률(%) 저장 및 조회 |
-| FR-4 | 손실률 분석 | 블렌드별/월별 혼합 후 손실률 추이 분석 |
-| FR-5 | 원가 리포트 | 블렌드별 원가 및 판매가 기반 수익성 분석 |
-| FR-6 | 로스팅 플랜 | 월별 블렌드별 로스팅 계획 수립 기능 |
+| ID   | 요구사항         | 설명                                                     |
+| ---- | ---------------- | -------------------------------------------------------- |
+| FR-1 | 로스팅 기록 관리 | 생두량, 볶은량, 손실률 자동 계산                         |
+| FR-2 | 원가 계산        | 블렌드별 원두 혼합률 × 생두 원가 → 블렌드 원가 자동 계산 |
+| FR-3 | 블렌딩 레시피    | 풀문/뉴문별 혼합률(%) 저장 및 조회                       |
+| FR-4 | 손실률 분석      | 블렌드별/월별 혼합 후 손실률 추이 분석                   |
+| FR-5 | 원가 리포트      | 블렌드별 원가 및 판매가 기반 수익성 분석                 |
+| FR-6 | 로스팅 플랜      | 월별 블렌드별 로스팅 계획 수립 기능                      |
 
 #### 비기능 요구사항 (NFR)
 
-| ID | 요구사항 | 기준 |
-|----|---------|------|
-| NFR-1 | 정확도 | 손실률 계산 오차 < 0.1% |
-| NFR-2 | 응답시간 | 데이터 조회 < 2초 |
-| NFR-3 | 가용성 | 99% 이상 |
-| NFR-4 | 확장성 | 월 1,000건 이상 데이터 처리 |
+| ID    | 요구사항 | 기준                        |
+| ----- | -------- | --------------------------- |
+| NFR-1 | 정확도   | 손실률 계산 오차 < 0.1%     |
+| NFR-2 | 응답시간 | 데이터 조회 < 2초           |
+| NFR-3 | 가용성   | 99% 이상                    |
+| NFR-4 | 확장성   | 월 1,000건 이상 데이터 처리 |
 
 ---
 
@@ -191,13 +191,13 @@
 
 ### 3.3 시사점
 
-| 항목 | 현황 | 개선 방향 |
-|------|------|---------|
-| 손실률 | 17.0% | 14.0% 이상 개선 |
-| 혼합률 관리 | 미정의 | 블렌드별 혼합률(%) 명확히 정의 |
-| 원가 추적 | 수동 | 혼합률 기반 자동 원가 계산 |
-| 품질 관리 | 기본 수준 | 혼합률 표준화로 재현성 강화 |
-| 데이터 분석 | 제한적 | 블렌드별 월별 분석 |
+| 항목        | 현황      | 개선 방향                      |
+| ----------- | --------- | ------------------------------ |
+| 손실률      | 17.0%     | 14.0% 이상 개선                |
+| 혼합률 관리 | 미정의    | 블렌드별 혼합률(%) 명확히 정의 |
+| 원가 추적   | 수동      | 혼합률 기반 자동 원가 계산     |
+| 품질 관리   | 기본 수준 | 혼합률 표준화로 재현성 강화    |
+| 데이터 분석 | 제한적    | 블렌드별 월별 분석             |
 
 ---
 
@@ -207,52 +207,54 @@
 
 #### Backend
 
-| 계층 | 기술 | 선택 이유 |
-|------|------|---------|
-| **Framework** | Streamlit | 데이터 앱 신속 개발 |
-| **ORM** | SQLAlchemy | 데이터 무결성 관리 |
-| **Database** | SQLite | 로컬 운영 환경에 최적 |
-| **분석** | Pandas/NumPy | 데이터 분석 및 시각화 |
-| **시각화** | Plotly | 인터랙티브 차트 |
+| 계층          | 기술         | 선택 이유             |
+| ------------- | ------------ | --------------------- |
+| **Framework** | Streamlit    | 데이터 앱 신속 개발   |
+| **ORM**       | SQLAlchemy   | 데이터 무결성 관리    |
+| **Database**  | SQLite       | 로컬 운영 환경에 최적 |
+| **분석**      | Pandas/NumPy | 데이터 분석 및 시각화 |
+| **시각화**    | Plotly       | 인터랙티브 차트       |
 
 #### Data Flow
 
-```
-Raw Data (로스팅 일지)
-    ↓
-[데이터 수집] → Excel/Manual Entry
-    ↓
-[데이터 변환] → SQLAlchemy ORM 저장
-    ↓
-[데이터 분석] → Pandas (손실률, 원가 계산)
-    ↓
-[시각화] → Plotly (대시보드, 리포트)
-    ↓
-[제출] → 의사결정 지원 (리포트, 계획안)
+```mermaid
+graph TD
+    RawData[Raw Data (로스팅 일지)] --> Collection[데이터 수집<br/>Excel/Manual Entry]
+    Collection --> Transformation[데이터 변환<br/>SQLAlchemy ORM 저장]
+    Transformation --> Analysis[데이터 분석<br/>Pandas (손실률, 원가 계산)]
+    Analysis --> Visualization[시각화<br/>Plotly (대시보드, 리포트)]
+    Visualization --> Submission[제출<br/>의사결정 지원 (리포트, 계획안)]
 ```
 
 ### 4.2 아키텍처
 
 #### 논리 아키텍처
 
-```
-┌─────────────────────────────────────────────┐
-│         Presentation Layer                   │
-│    (Streamlit Dashboard & Reports)          │
-├─────────────────────────────────────────────┤
-│         Business Logic Layer                 │
-│  - RoastingService (로스팅 데이터 관리)    │
-│  - CostService (원가 계산)                  │
-│  - AnalyticsService (분석 로직)             │
-├─────────────────────────────────────────────┤
-│         Data Access Layer                    │
-│  - SQLAlchemy Models                        │
-│  - Repository Pattern                       │
-├─────────────────────────────────────────────┤
-│         Data Layer                           │
-│  - SQLite Database                          │
-│  - Transaction Logs                         │
-└─────────────────────────────────────────────┘
+```mermaid
+graph TD
+    subgraph Presentation_Layer["Presentation Layer (Streamlit Dashboard & Reports)"]
+        UI[Streamlit UI]
+    end
+
+    subgraph Business_Logic_Layer["Business Logic Layer"]
+        RoastingService["RoastingService<br/>(로스팅 데이터 관리)"]
+        CostService["CostService<br/>(원가 계산)"]
+        AnalyticsService["AnalyticsService<br/>(분석 로직)"]
+    end
+
+    subgraph Data_Access_Layer["Data Access Layer"]
+        Models[SQLAlchemy Models]
+        Repo[Repository Pattern]
+    end
+
+    subgraph Data_Layer["Data Layer"]
+        SQLite[SQLite Database]
+        Logs[Transaction Logs]
+    end
+
+    Presentation_Layer --> Business_Logic_Layer
+    Business_Logic_Layer --> Data_Access_Layer
+    Data_Access_Layer --> Data_Layer
 ```
 
 #### 데이터 모델
@@ -384,12 +386,12 @@ RoastingPlan (로스팅 계획)
 
 ### 4.4 성공 메트릭
 
-| 메트릭 | 현재 | 목표 | 기간 |
-|--------|------|------|------|
-| 손실률 | 17.0% | 14.0% | 3개월 |
+| 메트릭         | 현재      | 목표           | 기간  |
+| -------------- | --------- | -------------- | ----- |
+| 손실률         | 17.0%     | 14.0%          | 3개월 |
 | 원가 계산 오차 | 수동 입력 | 자동 계산 100% | 1개월 |
-| 데이터 추적성 | 60% | 100% | 1개월 |
-| 의사결정 속도 | 2-3일 | < 1시간 | 2개월 |
+| 데이터 추적성  | 60%       | 100%           | 1개월 |
+| 의사결정 속도  | 2-3일     | < 1시간        | 2개월 |
 
 ---
 
@@ -399,54 +401,54 @@ RoastingPlan (로스팅 계획)
 
 #### Phase 1: 기초 데이터 구축 (1.5주)
 
-| Task | 설명 | 기간 | 담당 | 상태 |
-|------|------|------|------|------|
-| T1-1 | 기존 로스팅 기록 마이그레이션 (Sheet1 데이터) | 2일 | TBD | Pending |
-| T1-2 | 원두 마스터 데이터 정리 (13종) | 1일 | TBD | Pending |
-| T1-3 | 블렌드 혼합률 설정 (Sheet1(2) 데이터) | 1일 | TBD | Pending |
-| T1-4 | 원가 정보 입력 (생두 원가/블렌드 판매가) | 2일 | TBD | Pending |
-| T1-5 | 데이터 검증 및 정제 | 1일 | TBD | Pending |
+| Task | 설명                                          | 기간 | 담당 | 상태    |
+| ---- | --------------------------------------------- | ---- | ---- | ------- |
+| T1-1 | 기존 로스팅 기록 마이그레이션 (Sheet1 데이터) | 2일  | TBD  | Pending |
+| T1-2 | 원두 마스터 데이터 정리 (13종)                | 1일  | TBD  | Pending |
+| T1-3 | 블렌드 혼합률 설정 (Sheet1(2) 데이터)         | 1일  | TBD  | Pending |
+| T1-4 | 원가 정보 입력 (생두 원가/블렌드 판매가)      | 2일  | TBD  | Pending |
+| T1-5 | 데이터 검증 및 정제                           | 1일  | TBD  | Pending |
 
 #### Phase 2: 백엔드 서비스 개발 (2주)
 
-| Task | 설명 | 기간 | 담당 | 상태 |
-|------|------|------|------|------|
-| T2-1 | RoastingLog 모델 & CRUD | 3일 | TBD | Pending |
-| T2-2 | 손실률 자동 계산 로직 | 2일 | TBD | Pending |
-| T2-3 | CostService 개발 | 3일 | TBD | Pending |
-| T2-4 | 원가 계산 알고리즘 구현 | 2일 | TBD | Pending |
-| T2-5 | AnalyticsService 개발 | 2일 | TBD | Pending |
-| T2-6 | Unit Test 작성 | 3일 | TBD | Pending |
+| Task | 설명                    | 기간 | 담당 | 상태    |
+| ---- | ----------------------- | ---- | ---- | ------- |
+| T2-1 | RoastingLog 모델 & CRUD | 3일  | TBD  | Pending |
+| T2-2 | 손실률 자동 계산 로직   | 2일  | TBD  | Pending |
+| T2-3 | CostService 개발        | 3일  | TBD  | Pending |
+| T2-4 | 원가 계산 알고리즘 구현 | 2일  | TBD  | Pending |
+| T2-5 | AnalyticsService 개발   | 2일  | TBD  | Pending |
+| T2-6 | Unit Test 작성          | 3일  | TBD  | Pending |
 
 #### Phase 3: 프론트엔드 개발 (2.5주)
 
-| Task | 설명 | 기간 | 담당 | 상태 |
-|------|------|------|------|------|
-| T3-1 | 로스팅 기록 입력 페이지 (단일 입력) | 2일 | TBD | Pending |
-| T3-2 | 원가 계산 대시보드 | 2일 | TBD | Pending |
-| T3-3 | 손실률 분석 페이지 | 2일 | TBD | Pending |
-| T3-4 | 로스팅 계획 수립 페이지 | 2일 | TBD | Pending |
-| T3-5 | 리포트 생성 기능 | 2일 | TBD | Pending |
-| T3-6 | UI/UX 개선 | 2일 | TBD | Pending |
-| T3-7 | 영수증 형식 월별 로스팅 기록 입력 페이지 | 2.5일 | TBD | Pending |
+| Task | 설명                                     | 기간  | 담당 | 상태    |
+| ---- | ---------------------------------------- | ----- | ---- | ------- |
+| T3-1 | 로스팅 기록 입력 페이지 (단일 입력)      | 2일   | TBD  | Pending |
+| T3-2 | 원가 계산 대시보드                       | 2일   | TBD  | Pending |
+| T3-3 | 손실률 분석 페이지                       | 2일   | TBD  | Pending |
+| T3-4 | 로스팅 계획 수립 페이지                  | 2일   | TBD  | Pending |
+| T3-5 | 리포트 생성 기능                         | 2일   | TBD  | Pending |
+| T3-6 | UI/UX 개선                               | 2일   | TBD  | Pending |
+| T3-7 | 영수증 형식 월별 로스팅 기록 입력 페이지 | 2.5일 | TBD  | Pending |
 
 #### Phase 4: 통합 & 테스트 (1주)
 
-| Task | 설명 | 기간 | 담당 | 상태 |
-|------|------|------|------|------|
-| T4-1 | 시스템 통합 테스트 | 2일 | TBD | Pending |
-| T4-2 | 사용자 수용 테스트 (UAT) | 2일 | TBD | Pending |
-| T4-3 | 성능 최적화 | 1일 | TBD | Pending |
-| T4-4 | 버그 수정 및 배포 | 1일 | TBD | Pending |
+| Task | 설명                     | 기간 | 담당 | 상태    |
+| ---- | ------------------------ | ---- | ---- | ------- |
+| T4-1 | 시스템 통합 테스트       | 2일  | TBD  | Pending |
+| T4-2 | 사용자 수용 테스트 (UAT) | 2일  | TBD  | Pending |
+| T4-3 | 성능 최적화              | 1일  | TBD  | Pending |
+| T4-4 | 버그 수정 및 배포        | 1일  | TBD  | Pending |
 
 #### Phase 5: 배포 & 운영 (1주)
 
-| Task | 설명 | 기간 | 담당 | 상태 |
-|------|------|------|------|------|
-| T5-1 | 운영 매뉴얼 작성 | 1일 | TBD | Pending |
-| T5-2 | 직원 교육 | 1일 | TBD | Pending |
-| T5-3 | 시스템 배포 | 1일 | TBD | Pending |
-| T5-4 | 모니터링 & 지원 | 지속 | TBD | Pending |
+| Task | 설명             | 기간 | 담당 | 상태    |
+| ---- | ---------------- | ---- | ---- | ------- |
+| T5-1 | 운영 매뉴얼 작성 | 1일  | TBD  | Pending |
+| T5-2 | 직원 교육        | 1일  | TBD  | Pending |
+| T5-3 | 시스템 배포      | 1일  | TBD  | Pending |
+| T5-4 | 모니터링 & 지원  | 지속 | TBD  | Pending |
 
 ### 5.2 상세 작업 명세
 
@@ -612,16 +614,26 @@ UI 구성 (월별 그리드 형식):
 
 ### 5.3 일정 관리
 
-```
-일정표 (Gantt Chart):
+```mermaid
+gantt
+    title 로스팅 플랜 2025 개발 일정
+    dateFormat  YYYY-MM-DD
+    axisFormat  %W주
 
-Phase 1: 데이터 구축        [====]         1.5주
-Phase 2: 백엔드 개발           [========]   2주
-Phase 3: 프론트엔드 개발       [=========]   2.5주
-Phase 4: 통합 & 테스트                [===] 1주
-Phase 5: 배포 & 운영                    [=] 1주
+    section Phase 1
+    기초 데이터 구축       :a1, 2025-11-01, 1.5w
 
-총 예상 기간: 6.5주 (약 7주)
+    section Phase 2
+    백엔드 개발           :a2, after a1, 2w
+
+    section Phase 3
+    프론트엔드 개발       :a3, after a2, 2.5w
+
+    section Phase 4
+    통합 & 테스트         :a4, after a3, 1w
+
+    section Phase 5
+    배포 & 운영           :a5, after a4, 1w
 ```
 
 ---
@@ -721,13 +733,13 @@ app/
 
 ### 7.2 품질 기준
 
-| 항목 | 기준 | 목표 |
-|------|------|------|
-| 기능 완성도 | 필수 기능 100% 구현 | 100% |
-| 정확도 | 손실률 계산 오차 < 0.01% | 99.9% |
-| 성능 | 응답 시간 < 2초 | < 1초 |
-| 안정성 | 에러 발생 < 0.1% | 0% |
-| 사용자 만족도 | 설문 점수 > 4/5 | > 4.5/5 |
+| 항목          | 기준                     | 목표    |
+| ------------- | ------------------------ | ------- |
+| 기능 완성도   | 필수 기능 100% 구현      | 100%    |
+| 정확도        | 손실률 계산 오차 < 0.01% | 99.9%   |
+| 성능          | 응답 시간 < 2초          | < 1초   |
+| 안정성        | 에러 발생 < 0.1%         | 0%      |
+| 사용자 만족도 | 설문 점수 > 4/5          | > 4.5/5 |
 
 ### 7.3 배포 전 체크리스트
 
